--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -14,7 +14,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"E:/STUDY/Unity/CSCI 526 - Saymyname/WEBGL;;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"E:/STUDY/Unity/CSCI 526 - Saymyname/WEBGL2;E:/STUDY/Unity/CSCI 526 - Saymyname/WEBGL;;;;;;;;\"}"
             }
         ]
     }
